--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 </head>
 <body>
     <!-- js script -->
-    <div id="dialog" title="Basic dialog">
-        <input type="text" id="txt1">
-        <input type="text" id="txt2">
-       </div>
+
 <h1 id ="mahesh">hi Good morning</h1>
 <h2 id ="manju" > Hello</h2>
-<button id ="btn" onclick="TwoPrompt()">Click Me</button>
+<button id ="btn" ">Click Me</button>
 <input type="text" placeholder="name"/>
 <script>
     document.getElementById("mahesh").innerHTML = "Good Evening"
@@ -31,9 +28,7 @@
 // document.getElementById("manju").addEventListener("mouseover",function(){
     // alert("hiiiii")
 // })
-function TwoPrompt(){
-   document.getElementById("dialog").dialog({ resizable: false, height: 140, modal: true });
-}
+
 
 
 
